--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -84,7 +84,7 @@
       data-text-color="#ffffff"
     >
       <div class="container">
-        <a class="navbar-brand me-lg-5 me-xl-7" href="../pages/index.html">
+        <a class="navbar-brand me-lg-5 me-xl-7" href="dist/index.html">
           <img
             style="margin-top: 8px"
             src="../assets/img/Integrity Roofing-logo_183X100.png"
@@ -147,7 +147,7 @@
                     >
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li class="dropdown-menu-item">
-                        <a href="/dist/index.html" class="dropdown-menu-link"
+                        <a href="dist/index.html" class="dropdown-menu-link"
                           >Homepage</a
                         >
                       </li>
@@ -691,10 +691,14 @@
                 <h6 class="mb-1 mb-lg-4 text-uppercase">Pages</h6>
                 <ul class="pt-2 mb-5 fw-light list-unstyled">
                   <li class="my-1">
-                    <a href="#" class="text-white">Gallery</a>
+                    <a href="../pages/portfolio.html" class="text-white"
+                      >Gallery</a
+                    >
                   </li>
                   <li class="my-1">
-                    <a href="#" class="text-white">Contact Us</a>
+                    <a href="../pages/contact.html" class="text-white"
+                      >Contact Us</a
+                    >
                   </li>
                 </ul>
               </div>
