--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     >
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li class="dropdown-menu-item active">
-                        <a href="/dist/index.html" class="dropdown-menu-link"
+                        <a href="dist/index.html" class="dropdown-menu-link"
                           >Homepage</a
                         >
                       </li>
@@ -1190,10 +1190,14 @@
                 <h6 class="mb-1 mb-lg-4 text-uppercase">Pages</h6>
                 <ul class="pt-2 mb-5 fw-light list-unstyled">
                   <li class="my-1">
-                    <a href="#" class="text-white">Gallery</a>
+                    <a href="dist/pages/portfolio.html" class="text-white"
+                      >Gallery</a
+                    >
                   </li>
                   <li class="my-1">
-                    <a href="#" class="text-white">Contact Us</a>
+                    <a href="dist/pages/contact.html" class="text-white"
+                      >Contact Us</a
+                    >
                   </li>
                 </ul>
               </div>
