--- a/pages/contact.html
+++ b/pages/contact.html
@@ -80,7 +80,7 @@
       data-text-color="#ffffff"
     >
       <div class="container">
-        <a class="navbar-brand me-lg-5 me-xl-7" href="../pages/index.html">
+        <a class="navbar-brand me-lg-5 me-xl-7" href="dist/index.html">
           <img
             style="margin-top: 8px"
             src="../assets/img/Integrity Roofing-logo_183X100.png"
@@ -143,7 +143,7 @@
                     >
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li class="dropdown-menu-item">
-                        <a href="index.html" class="dropdown-menu-link"
+                        <a href="dist/index.html" class="dropdown-menu-link"
                           >Homepage</a
                         >
                       </li>
@@ -445,10 +445,12 @@
                 <h6 class="mb-1 mb-lg-4 text-uppercase">Pages</h6>
                 <ul class="pt-2 mb-5 fw-light list-unstyled">
                   <li class="my-1">
-                    <a href="/dist/index.html" class="text-white">Home</a>
+                    <a href="dist/index.html" class="text-white">Home</a>
                   </li>
                   <li class="my-1">
-                    <a href="./portfolio.html" class="text-white">Gallery</a>
+                    <a href="../pages/portfolio.html" class="text-white"
+                      >Gallery</a
+                    >
                   </li>
                 </ul>
               </div>
