push new relative paths

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       data-text-color="#ffffff"
     >
       <div class="container">
-        <a class="navbar-brand me-lg-5 me-xl-7" href="../pages/index.html">
+        <a class="navbar-brand me-lg-5 me-xl-7" href="./index.html">
           <img
             style="margin-top: 8px"
             src="../assets/img/Integrity Roofing-logo_183X100.png"
@@ -151,21 +151,17 @@
                     >
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li class="dropdown-menu-item active">
-                        <a href="dist/index.html" class="dropdown-menu-link"
+                        <a href="./index.html" class="dropdown-menu-link"
                           >Homepage</a
                         >
                       </li>
                       <li class="dropdown-menu-item">
-                        <a
-                          href="../pages/portfolio.html"
-                          class="dropdown-menu-link"
+                        <a href="./portfolio.html" class="dropdown-menu-link"
                           >Gallery</a
                         >
                       </li>
                       <li class="dropdown-menu-item">
-                        <a
-                          href="../pages/contact.html"
-                          class="dropdown-menu-link"
+                        <a href="./contact.html" class="dropdown-menu-link"
                           >Contact</a
                         >
                       </li>
@@ -1190,14 +1186,10 @@
                 <h6 class="mb-1 mb-lg-4 text-uppercase">Pages</h6>
                 <ul class="pt-2 mb-5 fw-light list-unstyled">
                   <li class="my-1">
-                    <a href="dist/pages/portfolio.html" class="text-white"
-                      >Gallery</a
-                    >
+                    <a href="./portfolio.html" class="text-white">Gallery</a>
                   </li>
                   <li class="my-1">
-                    <a href="dist/pages/contact.html" class="text-white"
-                      >Contact Us</a
-                    >
+                    <a href="./contact.html" class="text-white">Contact Us</a>
                   </li>
                 </ul>
               </div>
