--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
       data-text-color="#ffffff"
     >
       <div class="container">
-        <a class="navbar-brand me-lg-5 me-xl-7" href="dist/index.html">
+        <a class="navbar-brand me-lg-5 me-xl-7" href="./index.html">
           <img
             style="margin-top: 8px"
             src="../assets/img/Integrity Roofing-logo_183X100.png"
@@ -147,21 +147,17 @@
                     >
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li class="dropdown-menu-item">
-                        <a href="dist/index.html" class="dropdown-menu-link"
+                        <a href="./index.html" class="dropdown-menu-link"
                           >Homepage</a
                         >
                       </li>
                       <li class="dropdown-menu-item active">
-                        <a
-                          href="../pages/portfolio.html"
-                          class="dropdown-menu-link"
+                        <a href="./portfolio.html" class="dropdown-menu-link"
                           >Gallery</a
                         >
                       </li>
                       <li class="dropdown-menu-item">
-                        <a
-                          href="../pages/contact.html"
-                          class="dropdown-menu-link"
+                        <a href=".contact.html" class="dropdown-menu-link"
                           >Contact</a
                         >
                       </li>
@@ -274,7 +270,7 @@
                 Our Work
               </h1>
               <a
-                href="../pages/contact.html"
+                href="./contact.html"
                 class="btn btn-primary btn-lg px-6"
                 data-aos="fade-right"
                 data-aos-delay="100"
@@ -691,14 +687,10 @@
                 <h6 class="mb-1 mb-lg-4 text-uppercase">Pages</h6>
                 <ul class="pt-2 mb-5 fw-light list-unstyled">
                   <li class="my-1">
-                    <a href="../pages/portfolio.html" class="text-white"
-                      >Gallery</a
-                    >
+                    <a href="./portfolio.html" class="text-white">Gallery</a>
                   </li>
                   <li class="my-1">
-                    <a href="../pages/contact.html" class="text-white"
-                      >Contact Us</a
-                    >
+                    <a href="./contact.html" class="text-white">Contact Us</a>
                   </li>
                 </ul>
               </div>
