--- a/index.html
+++ b/index.html
@@ -1003,6 +1003,162 @@
                 </blockquote>
               </div>
             </div>
+
+            <div class="row justify-content-center">
+              <div class="col-6 col-lg-3">
+                <h3 class="my-0 fs-1 fw-medium text-primary text-uppercase">
+                  Reviews
+                </h3>
+                <h2 class="mb-5 fw-medium text-secondary text-uppercase">
+                  Real Customers, Real Results
+                </h2>
+              </div>
+              <div class="col-lg-9">
+                <blockquote class="blockquote">
+                  <p>
+                    If you’re looking for a reliable roofing company with
+                    “integrity”, I highly recommend Integrity Roofing. Clint is
+                    very polite, extremely knowledgeable with insurance claims,
+                    and he walked me through the entire process. Great
+                    communication and great crew as well. "
+                  </p>
+                  <footer class="blockquote-footer text-end">
+                    <span class="h5 text-primary fw-medium">T Villanueva </span
+                    ><br />Havenwood— New Braunfels
+                  </footer>
+                </blockquote>
+              </div>
+            </div>
+
+            <div class="row justify-content-center">
+              <div class="col-6 col-lg-3">
+                <h3 class="my-0 fs-1 fw-medium text-primary text-uppercase">
+                  Reviews
+                </h3>
+                <h2 class="mb-5 fw-medium text-secondary text-uppercase">
+                  Real Customers, Real Results
+                </h2>
+              </div>
+              <div class="col-lg-9">
+                <blockquote class="blockquote">
+                  <p>
+                    Outstanding roofing company from beginning to the end. My
+                    experience with Integrity Roofing was amazing. Clint and
+                    Paul both helped us with our insurance claim and that was
+                    very helpful and reassuring. Thanks guys !!"
+                  </p>
+                  <footer class="blockquote-footer text-end">
+                    <span class="h5 text-primary fw-medium">Ms. Smith </span
+                    ><br />Round Rock
+                  </footer>
+                </blockquote>
+              </div>
+            </div>
+
+            <div class="row justify-content-center">
+              <div class="col-6 col-lg-3">
+                <h3 class="my-0 fs-1 fw-medium text-primary text-uppercase">
+                  Reviews
+                </h3>
+                <h2 class="mb-5 fw-medium text-secondary text-uppercase">
+                  Real Customers, Real Results
+                </h2>
+              </div>
+              <div class="col-lg-9">
+                <blockquote class="blockquote">
+                  <p>
+                    Very happy with Integrity Roofing. They installed a new roof
+                    on my house and it looks absolutely terrific ! Paul was
+                    professional, courteous, and efficient. He and the crew
+                    arrived on time and everything was cleaned up after the roof
+                    was completed. "
+                  </p>
+                  <footer class="blockquote-footer text-end">
+                    <span class="h5 text-primary fw-medium">M Bland </span
+                    ><br />Hollytree—Tyler
+                  </footer>
+                </blockquote>
+              </div>
+            </div>
+
+            <div class="row justify-content-center">
+              <div class="col-6 col-lg-3">
+                <h3 class="my-0 fs-1 fw-medium text-primary text-uppercase">
+                  Reviews
+                </h3>
+                <h2 class="mb-5 fw-medium text-secondary text-uppercase">
+                  Real Customers, Real Results
+                </h2>
+              </div>
+              <div class="col-lg-9">
+                <blockquote class="blockquote">
+                  <p>
+                    Great roofing company. They replaced my roof in one day.
+                    Very professional and no debris left afterwards. Clint and
+                    Paul were a pleasure to deal with and helped us out with our
+                    insurance claim every step of the way. Actually, all we did
+                    was file the claim and they took care of the rest. "
+                  </p>
+                  <footer class="blockquote-footer text-end">
+                    <span class="h5 text-primary fw-medium">J Hamlin </span
+                    ><br />Frisco
+                  </footer>
+                </blockquote>
+              </div>
+            </div>
+
+            <div class="row justify-content-center">
+              <div class="col-6 col-lg-3">
+                <h3 class="my-0 fs-1 fw-medium text-primary text-uppercase">
+                  Reviews
+                </h3>
+                <h2 class="mb-5 fw-medium text-secondary text-uppercase">
+                  Real Customers, Real Results
+                </h2>
+              </div>
+              <div class="col-lg-9">
+                <blockquote class="blockquote">
+                  <p>
+                    Integrity Roofing was nothing short of fantastic. Only one
+                    day to replace our roof. Very professional, courteous, and
+                    efficient. Clint and Paul are a great team. We were having
+                    trouble with our insurance claim, but with their knowledge,
+                    expertise, & professionalism, the insurance carrier agreed
+                    to pay our claim. "
+                  </p>
+                  <footer class="blockquote-footer text-end">
+                    <span class="h5 text-primary fw-medium">C Williams </span
+                    ><br />The Woodlands
+                  </footer>
+                </blockquote>
+              </div>
+            </div>
+
+            <div class="row justify-content-center">
+              <div class="col-6 col-lg-3">
+                <h3 class="my-0 fs-1 fw-medium text-primary text-uppercase">
+                  Reviews
+                </h3>
+                <h2 class="mb-5 fw-medium text-secondary text-uppercase">
+                  Real Customers, Real Results
+                </h2>
+              </div>
+              <div class="col-lg-9">
+                <blockquote class="blockquote">
+                  <p>
+                    Clint is well mannered and extremely knowledgeable with
+                    insurance claims, which he handled on his own, even helped
+                    me file the claim too. The new roof looks great !! I
+                    definitely understand why they say “integrity”, I highly
+                    recommend them—Integrity Roofing. "
+                  </p>
+                  <footer class="blockquote-footer text-end">
+                    <span class="h5 text-primary fw-medium">Mr. Sarmiento </span
+                    ><br />San Antonio
+                  </footer>
+                </blockquote>
+              </div>
+            </div>
           </div>
           <!-- End of Carousel -->
         </div>
