--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
 
     <!-- emailjs servcies -->
 
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
+    ></script>
     <script type="text/javascript">
       (function () {
         emailjs.init({
