commit new relative path for email.js

--- a/index.html
+++ b/index.html
@@ -1414,6 +1414,6 @@
 
     <!-- Theme Javascripts -->
     <script src="../assets/js/theme.js"></script>
-    <script src="dist/assets/js/email.js"></script>
+    <script src="./assets/js/email.js"></script>
   </body>
 </html>
