--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                   <li class="spyre-nav-item dropdown">
                     <a
                       href="#"
-                      class="spyre-nav-link dropdown-toggle"
+                      class="spyre-nav-link"
                       id="navbarDropdown"
                       role="button"
                       aria-haspopup="true"
@@ -317,9 +317,8 @@
                     craftsmanship and exceptional customer service. Trust us to
                     safeguard your home or business with durable, long-lasting
                     roofing solutions that stand the test of time.
-                    <a id="contactClick" href="">Contact us</a>
-                    today for a free consultation and experience peace of mind
-                    under a
+                    <a id="contactClick" href="" class="fw-bold">Contact US</a>
+                    today for a free consultation.
                   </p>
 
                   <!-- <div class="d-flex justify-content-center">
@@ -336,12 +335,7 @@
                   >
                     <div class="col-8 col-lg-5">
                       <a href="#" class="btn btn-primary btn-lg w-100 mb-2"
-                        >Get in touch</a
-                      >
-                    </div>
-                    <div class="col-8 col-lg-5">
-                      <a href="#" class="btn btn-secondary btn-lg w-100 mb-2"
-                        >Read more</a
+                        >Click Here For Quote</a
                       >
                     </div>
                   </div>
@@ -356,7 +350,7 @@
                 class="d-flex h-100 align-items-center ms-lg-n7 release-container unrelease-lg-container"
               >
                 <!-- Carousel -->
-                <div
+                <!-- <div
                   class="owl-carousel"
                   data-carousel-options='{"items":1,"loop":true,"responsive":{"0":{"dots":true,"nav":false},"992":{"dots":false,"nav":true}}}'
                 >
@@ -395,7 +389,7 @@
                       alt=""
                     />
                   </div>
-                </div>
+                </div> -->
                 <!-- End of Carousel -->
               </div>
             </div>
@@ -483,7 +477,7 @@
       <!-- End of Section -->
 
       <!-- Section -->
-      <section class="pt-0">
+      <!-- <section class="pt-0">
         <div class="container-fluid px-xl-0">
           <div class="row align-items-center">
             <div
@@ -554,7 +548,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- End of Section -->
 
       <!-- Section -->
@@ -666,7 +660,7 @@
       <!-- End of Section -->
 
       <!-- Section -->
-      <section class="py-8 py-md-11 overflow-hidden">
+      <!-- <section class="py-8 py-md-11 overflow-hidden">
         <div
           class="bg-container parallax"
           data-rellax-percentage="0.5"
@@ -687,7 +681,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- End of Section -->
 
       <!-- Section for tear down photos -->
@@ -922,97 +916,18 @@
                 </h2>
               </div>
               <div class="col-lg-9">
-                <blockquote class="blockquote" data-aos="zoom-out-up">
-                  <p>
-                    Working with Integrity Roofing was an absolute pleasure!
-                    From the initial consultation to the completion of our roof
-                    repair, they demonstrated professionalism, expertise, and
-                    exceptional customer service. The team arrived promptly,
-                    assessed the problem efficiently, and provided a clear
-                    explanation of the necessary repairs. Throughout the
-                    process, they kept us informed and involved, addressing any
-                    concerns with transparency and patience. The quality of
-                    their workmanship exceeded our expectations, and our roof
-                    looks better than ever. We highly recommend Integrity
-                    Roofing to anyone in need of reliable and skilled roofing
-                    services.
-                  </p>
-                  <footer class="blockquote-footer text-end">
-                    <span class="h5 text-primary fw-medium">George Parker</span
-                    ><br />Home Owner
-                  </footer>
-                </blockquote>
-              </div>
-            </div>
-            <div class="row justify-content-center">
-              <div class="col-6 col-lg-3">
-                <h3 class="my-0 fs-1 fw-medium text-primary text-uppercase">
-                  Reviews
-                </h3>
-                <h2 class="mb-5 fw-medium text-secondary text-uppercase">
-                  Real Customers, Real Results
-                </h2>
-              </div>
-              <div class="col-lg-9">
                 <blockquote class="blockquote">
                   <p>
-                    Choosing Integrity Roofing Company for our recent roof
-                    installation was the best decision we could have made. From
-                    start to finish, they exhibited professionalism, expertise,
-                    and a commitment to excellence that truly set them apart.
+                    Integrity Roofing was nothing short of fantastic. Only one
+                    day to replace our roof. Very professional, courteous, and
+                    efficient. Clint and Paul are a great team. We were having
+                    trouble with our insurance claim, but with their knowledge,
+                    expertise, & professionalism, the insurance carrier agreed
+                    to pay our claim. "
                   </p>
                   <footer class="blockquote-footer text-end">
-                    <span class="h5 text-primary fw-medium">Mary Johnson</span
-                    ><br />
-                  </footer>
-                </blockquote>
-              </div>
-            </div>
-            <div class="row justify-content-center">
-              <div class="col-6 col-lg-3">
-                <h3 class="my-0 fs-1 fw-medium text-primary text-uppercase">
-                  Reviews
-                </h3>
-                <h2 class="mb-5 fw-medium text-secondary text-uppercase">
-                  Real Customers, Real Results
-                </h2>
-              </div>
-              <div class="col-lg-9">
-                <blockquote class="blockquote">
-                  <p>
-                    The quality of their workmanship is evident in the finished
-                    product, and our new roof looks fantastic. We highly
-                    recommend Integrity Roofing to anyone in need of roofing
-                    services.
-                  </p>
-                  <footer class="blockquote-footer text-end">
-                    <span class="h5 text-primary fw-medium">Austin Smith</span
-                    ><br />
-                  </footer>
-                </blockquote>
-              </div>
-            </div>
-            <div class="row justify-content-center">
-              <div class="col-6 col-lg-3">
-                <h3 class="my-0 fs-1 fw-medium text-primary text-uppercase">
-                  Reviews
-                </h3>
-                <h2 class="mb-5 fw-medium text-secondary text-uppercase">
-                  Real Customers, Real Results
-                </h2>
-              </div>
-              <div class="col-lg-9">
-                <blockquote class="blockquote">
-                  <p>
-                    Our new roof not only looks fantastic but provides us with
-                    peace of mind knowing it was installed by a reputable and
-                    trustworthy company. We couldn't be happier with the results
-                    and would highly recommend Integrity to anyone in need of
-                    top-notch roofing services."
-                  </p>
-                  <footer class="blockquote-footer text-end">
-                    <span class="h5 text-primary fw-medium">David Garcia</span
-                    ><br />
+                    <span class="h5 text-primary fw-medium">C Williams </span
+                    ><br />The Woodlands
                   </footer>
                 </blockquote>
               </div>
@@ -1030,15 +945,15 @@
               <div class="col-lg-9">
                 <blockquote class="blockquote">
                   <p>
-                    If you’re looking for a reliable roofing company with
-                    “integrity”, I highly recommend Integrity Roofing. Clint is
-                    very polite, extremely knowledgeable with insurance claims,
-                    and he walked me through the entire process. Great
-                    communication and great crew as well. "
+                    Clint is well mannered and extremely knowledgeable with
+                    insurance claims, which he handled on his own, even helped
+                    me file the claim too. The new roof looks great !! I
+                    definitely understand why they say “integrity”, I highly
+                    recommend them—Integrity Roofing. "
                   </p>
                   <footer class="blockquote-footer text-end">
-                    <span class="h5 text-primary fw-medium">T Villanueva </span
-                    ><br />Havenwood— New Braunfels
+                    <span class="h5 text-primary fw-medium">Mr. Sarmiento </span
+                    ><br />San Antonio
                   </footer>
                 </blockquote>
               </div>
@@ -1064,32 +979,6 @@
                   <footer class="blockquote-footer text-end">
                     <span class="h5 text-primary fw-medium">Ms. Smith </span
                     ><br />Round Rock
-                  </footer>
-                </blockquote>
-              </div>
-            </div>
-
-            <div class="row justify-content-center">
-              <div class="col-6 col-lg-3">
-                <h3 class="my-0 fs-1 fw-medium text-primary text-uppercase">
-                  Reviews
-                </h3>
-                <h2 class="mb-5 fw-medium text-secondary text-uppercase">
-                  Real Customers, Real Results
-                </h2>
-              </div>
-              <div class="col-lg-9">
-                <blockquote class="blockquote">
-                  <p>
-                    Very happy with Integrity Roofing. They installed a new roof
-                    on my house and it looks absolutely terrific ! Paul was
-                    professional, courteous, and efficient. He and the crew
-                    arrived on time and everything was cleaned up after the roof
-                    was completed. "
-                  </p>
-                  <footer class="blockquote-footer text-end">
-                    <span class="h5 text-primary fw-medium">M Bland </span
-                    ><br />Hollytree—Tyler
                   </footer>
                 </blockquote>
               </div>
@@ -1133,21 +1022,51 @@
               <div class="col-lg-9">
                 <blockquote class="blockquote">
                   <p>
-                    Integrity Roofing was nothing short of fantastic. Only one
-                    day to replace our roof. Very professional, courteous, and
-                    efficient. Clint and Paul are a great team. We were having
-                    trouble with our insurance claim, but with their knowledge,
-                    expertise, & professionalism, the insurance carrier agreed
-                    to pay our claim. "
+                    Very happy with Integrity Roofing. They installed a new roof
+                    on my house and it looks absolutely terrific ! Paul was
+                    professional, courteous, and efficient. He and the crew
+                    arrived on time and everything was cleaned up after the roof
+                    was completed. "
                   </p>
                   <footer class="blockquote-footer text-end">
-                    <span class="h5 text-primary fw-medium">C Williams </span
-                    ><br />The Woodlands
+                    <span class="h5 text-primary fw-medium">M Bland </span
+                    ><br />Hollytree—Tyler
                   </footer>
                 </blockquote>
               </div>
             </div>
-
+            <div class="row justify-content-center">
+              <div class="col-6 col-lg-3">
+                <h3 class="my-0 fs-1 fw-medium text-primary text-uppercase">
+                  Reviews
+                </h3>
+                <h2 class="mb-5 fw-medium text-secondary text-uppercase">
+                  Real Customers, Real Results
+                </h2>
+              </div>
+              <div class="col-lg-9">
+                <blockquote class="blockquote" data-aos="zoom-out-up">
+                  <p>
+                    Working with Integrity Roofing was an absolute pleasure!
+                    From the initial consultation to the completion of our roof
+                    repair, they demonstrated professionalism, expertise, and
+                    exceptional customer service. The team arrived promptly,
+                    assessed the problem efficiently, and provided a clear
+                    explanation of the necessary repairs. Throughout the
+                    process, they kept us informed and involved, addressing any
+                    concerns with transparency and patience. The quality of
+                    their workmanship exceeded our expectations, and our roof
+                    looks better than ever. We highly recommend Integrity
+                    Roofing to anyone in need of reliable and skilled roofing
+                    services.
+                  </p>
+                  <footer class="blockquote-footer text-end">
+                    <span class="h5 text-primary fw-medium">George Parker</span
+                    ><br />San Marcos
+                  </footer>
+                </blockquote>
+              </div>
+            </div>
             <div class="row justify-content-center">
               <div class="col-6 col-lg-3">
                 <h3 class="my-0 fs-1 fw-medium text-primary text-uppercase">
@@ -1160,19 +1079,93 @@
               <div class="col-lg-9">
                 <blockquote class="blockquote">
                   <p>
-                    Clint is well mannered and extremely knowledgeable with
-                    insurance claims, which he handled on his own, even helped
-                    me file the claim too. The new roof looks great !! I
-                    definitely understand why they say “integrity”, I highly
-                    recommend them—Integrity Roofing. "
+                    Choosing Integrity Roofing Company for our recent roof
+                    installation was the best decision we could have made. From
+                    start to finish, they exhibited professionalism, expertise,
+                    and a commitment to excellence that truly set them apart.
                   </p>
                   <footer class="blockquote-footer text-end">
-                    <span class="h5 text-primary fw-medium">Mr. Sarmiento </span
+                    <span class="h5 text-primary fw-medium">Mary Johnson</span
                     ><br />San Antonio
                   </footer>
                 </blockquote>
               </div>
             </div>
+            <div class="row justify-content-center">
+              <div class="col-6 col-lg-3">
+                <h3 class="my-0 fs-1 fw-medium text-primary text-uppercase">
+                  Reviews
+                </h3>
+                <h2 class="mb-5 fw-medium text-secondary text-uppercase">
+                  Real Customers, Real Results
+                </h2>
+              </div>
+              <div class="col-lg-9">
+                <blockquote class="blockquote">
+                  <p>
+                    The quality of their workmanship is evident in the finished
+                    product, and our new roof looks fantastic. We highly
+                    recommend Integrity Roofing to anyone in need of roofing
+                    services.
+                  </p>
+                  <footer class="blockquote-footer text-end">
+                    <span class="h5 text-primary fw-medium">Austin Smith</span
+                    ><br />Austin
+                  </footer>
+                </blockquote>
+              </div>
+            </div>
+            <div class="row justify-content-center">
+              <div class="col-6 col-lg-3">
+                <h3 class="my-0 fs-1 fw-medium text-primary text-uppercase">
+                  Reviews
+                </h3>
+                <h2 class="mb-5 fw-medium text-secondary text-uppercase">
+                  Real Customers, Real Results
+                </h2>
+              </div>
+              <div class="col-lg-9">
+                <blockquote class="blockquote">
+                  <p>
+                    Our new roof not only looks fantastic but provides us with
+                    peace of mind knowing it was installed by a reputable and
+                    trustworthy company. We couldn't be happier with the results
+                    and would highly recommend Integrity to anyone in need of
+                    top-notch roofing services."
+                  </p>
+                  <footer class="blockquote-footer text-end">
+                    <span class="h5 text-primary fw-medium">David Garcia</span
+                    ><br />New Braunfels
+                  </footer>
+                </blockquote>
+              </div>
+            </div>
+
+            <!-- <div class="row justify-content-center">
+              <div class="col-6 col-lg-3">
+                <h3 class="my-0 fs-1 fw-medium text-primary text-uppercase">
+                  Reviews
+                </h3>
+                <h2 class="mb-5 fw-medium text-secondary text-uppercase">
+                  Real Customers, Real Results
+                </h2>
+              </div>
+              <div class="col-lg-9">
+                <blockquote class="blockquote">
+                  <p>
+                    If you’re looking for a reliable roofing company with
+                    “integrity”, I highly recommend Integrity Roofing. Clint is
+                    very polite, extremely knowledgeable with insurance claims,
+                    and he walked me through the entire process. Great
+                    communication and great crew as well. "
+                  </p>
+                  <footer class="blockquote-footer text-end">
+                    <span class="h5 text-primary fw-medium">T Villanueva </span
+                    ><br />Havenwood— New Braunfels
+                  </footer>
+                </blockquote>
+              </div>
+            </div> -->
           </div>
           <!-- End of Carousel -->
         </div>
