--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                     craftsmanship and exceptional customer service. Trust us to
                     safeguard your home or business with durable, long-lasting
                     roofing solutions that stand the test of time.
-                    <a id="contactClick" href="" class="fw-bold">Contact US</a>
+                    <a id="contactClick" href="#" class="fw-bold">Contact US</a>
                     today for a free consultation.
                   </p>
 
@@ -350,7 +350,10 @@
                     class="row justify-content-center justify-content-lg-start"
                   >
                     <div class="col-8 col-lg-5">
-                      <a href="#" class="btn btn-primary btn-lg w-100 mb-2"
+                      <a
+                        id="touchBtn"
+                        href="#"
+                        class="btn btn-primary btn-lg w-100 mb-2"
                         >Click Here For Quote</a
                       >
                     </div>
