--- a/portfolio.html
+++ b/portfolio.html
@@ -135,7 +135,21 @@
             >
               <nav class="spyre-navbar-nav">
                 <ul class="spyre-nav">
-                  <li class="spyre-nav-item dropdown">
+                  <li class="dropdown-menu-item active">
+                    <a href="./index.html" class="dropdown-menu-link"
+                      >Homepage</a
+                    >
+                  </li>
+                  <li class="dropdown-menu-item">
+                    <a href="./portfolio.html" class="dropdown-menu-link"
+                      >Gallery</a
+                    >
+                  </li>
+                  <li class="dropdown-menu-item">
+                    <a href="./contact.html" class="dropdown-menu-link"
+                      >Contact</a
+                    >
+                    <!-- <li class="spyre-nav-item dropdown">
                     <a
                       href="#"
                       class="spyre-nav-link dropdown-toggle"
@@ -162,6 +176,7 @@
                         >
                       </li>
                     </ul>
+                  </li> -->
                   </li>
                 </ul>
               </nav>
