--- a/index.html
+++ b/index.html
@@ -309,9 +309,9 @@
                     are &quot;Best in Texas&quot;.
                   </h3>
                   <h6 class="fw-bold" style="margin-bottom: 20px">
-                    Stragetically located in NB to serve Central & South Texas,
-                    we also have offices in Frisco to serve North Texas and in
-                    Tyler to serve East Texas.
+                    Stragetically located in New Braunfels to serve Central &
+                    South Texas, we also have offices in Frisco to serve North
+                    Texas and in Tyler to serve East Texas.
                   </h6>
                   <p class="d-flex justify-content-center">
                     Welcome to Integrity Roofing New Braunfels Texas, where
@@ -1080,8 +1080,8 @@
                     services.
                   </p>
                   <footer class="blockquote-footer text-end">
-                    <span class="h5 text-primary fw-medium">George Parker</span
-                    ><br />San Marcos
+                    <span class="h5 text-primary fw-medium">G Parker</span
+                    ><br />Midland
                   </footer>
                 </blockquote>
               </div>
@@ -1104,7 +1104,7 @@
                     and a commitment to excellence that truly set them apart.
                   </p>
                   <footer class="blockquote-footer text-end">
-                    <span class="h5 text-primary fw-medium">Mary Johnson</span
+                    <span class="h5 text-primary fw-medium">M Johnson</span
                     ><br />San Antonio
                   </footer>
                 </blockquote>
@@ -1128,7 +1128,7 @@
                     services.
                   </p>
                   <footer class="blockquote-footer text-end">
-                    <span class="h5 text-primary fw-medium">Austin Smith</span
+                    <span class="h5 text-primary fw-medium">A Smith</span
                     ><br />Austin
                   </footer>
                 </blockquote>
@@ -1392,10 +1392,10 @@
                 </ul>
               </div>
               <div class="col-6 col-lg-3">
-                <h6 class="mb-1 mb-lg-4 text-uppercase">Help</h6>
+                <!-- <h6 class="mb-1 mb-lg-4 text-uppercase">Help</h6>
                 <ul class="pt-2 mb-5 fw-light list-unstyled">
                   <li class="my-1"><a href="#" class="text-white">FAQs</a></li>
-                </ul>
+                </ul> -->
               </div>
             </div>
 
