--- a/portfolio.html
+++ b/portfolio.html
@@ -710,10 +710,10 @@
                 </ul>
               </div>
               <div class="col-6 col-lg-3">
-                <h6 class="mb-1 mb-lg-4 text-uppercase">Help</h6>
+                <!-- <h6 class="mb-1 mb-lg-4 text-uppercase">Help</h6>
                 <ul class="pt-2 mb-5 fw-light list-unstyled">
                   <li class="my-1"><a href="#" class="text-white">FAQs</a></li>
-                </ul>
+                </ul> -->
               </div>
             </div>
 
