--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 
                   <h3 style="color: red; margin-bottom: 20px">
                     From Amarillo to Houston and El Paso to Texarkana, we truly
-                    are &quot;Best in Texas&quot;.
+                    are the &quot;Best in Texas&quot;.
                   </h3>
                   <h6 class="fw-bold" style="margin-bottom: 20px">
                     Stragetically located in New Braunfels to serve Central &
