commit fix to index paragraphs

--- a/index.html
+++ b/index.html
@@ -317,11 +317,11 @@
                     Welcome to Integrity Roofing New Braunfels Texas, where
                     quality meets reliability in roofing solutions. Integrity
                     Roofing NBTX company boasts a team of salesmen who bring a
-                    unique advantage to the table. They are former insurance
+                    unique advantage to the table. We are former insurance
                     adjusters with specialized expertise in storm repair and
-                    insurance claims. Leveraging their extensive experience in
+                    insurance claims. Leveraging our extensive experience in
                     assessing storm damage and navigating insurance procedures,
-                    our salesmen provide invaluable support to roofers and
+                    we salesmen provide invaluable support to roofers and
                     homeowners alike.
                   </p>
 
