--- a/index.html
+++ b/index.html
@@ -321,8 +321,8 @@
                     adjusters with specialized expertise in storm repair and
                     insurance claims. Leveraging our extensive experience in
                     assessing storm damage and navigating insurance procedures,
-                    we salesmen provide invaluable support to roofers and
-                    homeowners alike.
+                    we provide invaluable support to roofers and homeowners
+                    alike.
                   </p>
 
                   <p style="margin-bottom: 20px">
